feat: adding Button, Footer, Header, Icon, and ThemeSwitcher components, and svg assets

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,16 +8,9 @@ import SiteLayout from '../layouts/SiteLayout.astro';
 	title='Cory Larcade Resume'
 >
 	<main>
-		<header class='header'>
-			Header here
-			<!-- <IconButton client:media="(max-width: 767)" icon=""/> -->
-		</header>
 		<h1>Cory Larcade</h1>
 	</main>
 </SiteLayout>
 
-<style lang='scss'>
-	.header {
-		background-color: var(--red-0);
-	}
-</style>
+<!-- <style lang='scss'>
+</style> -->
