--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,6 +1,7 @@
 //// Mobile
 
 // Font sizes
+// $mobile-font-size--S: 14px;
 $mobile-font-size--M: 16px;
 $mobile-font-size--ML: 20px;
 $mobile-font-size--L: 24px;
