--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,6 +1,8 @@
 ---
 // Supports only weight 400
 import '@fontsource-variable/roboto-flex';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.scss';
 
 interface Props {
@@ -20,11 +22,16 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
+
 		<slot />
+
+		<Footer />
 	</body>
 </html>
 
 <style lang='scss'>
+
 	@use '../styles/colors';
 
 	html {
@@ -34,4 +41,5 @@ const { title } = Astro.props;
 	body {
 		color: colors.$black;
 	}
+
 </style>
