--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,13 @@ button {
 	border: none;
 	background-color: transparent;
 }
+
+.visually-hidden {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
