--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,51 +2,77 @@
 import Button from './Button.astro';
 import Icon from './Icon.astro';
 import ThemeSwitcher from './ThemeSwitcher.astro';
+
+interface Props {
+	sidenavId: string;
+}
+
+const {sidenavId} = Astro.props;
 ---
 
-<header class='header'>
-	<Button
-		id='mobile-menu-button'
-		class='header__mobile-menu-button'
-		type='icon'
-	>
-		<Icon icon='menu-hamburger' />
-	</Button>
-
-	<div class='header__center'>
+<my-header data-sidenavid={sidenavId}>
+	<header class='header'>
 		<Button
-			id='contact-me'
-			type='primary'
+			id='mobile-menu-button'
+			class='header__mobile-menu-button'
+			type='icon'
 		>
-			Contact me
+			<Icon icon='menu-hamburger' />
 		</Button>
-	</div>
 
-	<div class='header__right'>
-		<ThemeSwitcher id='theme-switcher' />
-	</div>
-</header>
+		<div class='header__center'>
+			<Button
+				id='contact-me'
+				type='primary'
+			>
+				Contact me
+			</Button>
+		</div>
+
+		<div class='header__right'>
+			<ThemeSwitcher id='theme-switcher' />
+		</div>
+	</header>
+</my-header>
 
 <script>
 
-	// Mobile menu button handling
-	const mobileMenuButtonElement = document.getElementById('mobile-menu-button');
+	class Header extends HTMLElement {
+		connectedCallback() {
+			// Read the message from the data attribute.
+			const sidenavId = this.dataset.sidenavid as string;
+			console.log('Header-->sidenavId', sidenavId);
 
-	const toggleMobileNavSidebar = () => {
-		alert('open mobile nav sidebar22');
-	};
+			// Get DOM Elements
+			const sidenavElement = document.getElementById(sidenavId);
+			const mobileMenuButtonElement = document.getElementById('mobile-menu-button');
+			const contactMeButtonElement = document.getElementById('contact-me');
 
-	// TODO: Add events for touch/keyboard events
-	mobileMenuButtonElement?.addEventListener('click', toggleMobileNavSidebar);
+			if (mobileMenuButtonElement && sidenavElement) {
+				// Mobile menu button handling
+				const toggleMobileNavSidebar = () => {
+					console.log('toggleMobileNavSidebar');
+					sidenavElement.classList.remove('visually-hidden');
+					sidenavElement.classList.add('drawer-container--is-open');
+					// alert('open mobile nav sidebar22');
+				};
 
-	// Contact me button handling
-	const contactMeButtonElement = document.getElementById('contact-me');
+				// TODO: Add events for touch/keyboard events
+				mobileMenuButtonElement?.addEventListener('click', toggleMobileNavSidebar);
+			}
 
-	const contactMeButtonHandler = () => {
-		alert('contactMeButtonHandler');
-	};
+			if (contactMeButtonElement) {
+				// Contact me button handling
+				const contactMeButtonHandler = () => {
+					alert('contactMeButtonHandler');
+				};
 
-	contactMeButtonElement?.addEventListener('click', contactMeButtonHandler);
+				contactMeButtonElement?.addEventListener('click', contactMeButtonHandler);
+			}
+		}
+	}
+
+	customElements.define('my-header', Header);
 
 </script>
 
