--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,6 +1,7 @@
 ---
 // Supports only weight 400
 import '@fontsource-variable/roboto-flex';
+import Drawer from '../components/Drawer.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.scss';
@@ -10,6 +11,7 @@ interface Props {
 }
 
 const {title} = Astro.props;
+const sidenavId = 'sidenav';
 ---
 
 <!doctype html>
@@ -22,11 +24,13 @@ const {title} = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body id='body'>
-		<Header />
+		<Header sidenavId={sidenavId} />
 
 		<slot />
 
 		<Footer />
+
+		<Drawer id={sidenavId} />
 	</body>
 </html>
 
