--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,9 +1,9 @@
 ---
 // Supports only weight 400
 import '@fontsource-variable/roboto-flex';
-import Drawer from '../components/Drawer.astro';
-import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import LeftNav from '../components/LeftNav.astro';
 import '../styles/global.scss';
 
 interface Props {
@@ -30,7 +30,7 @@ const sidenavId = 'sidenav';
 
 		<Footer />
 
-		<Drawer id={sidenavId} />
+		<LeftNav id={sidenavId} />
 	</body>
 </html>
 
