--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -4,13 +4,16 @@ import '@fontsource-variable/roboto-flex';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import LeftNav from '../components/LeftNav.astro';
+import {type MainNavigationLinksMetadata} from '../types/MainNavigationLinkTypes';
+
 import '../styles/global.scss';
 
 interface Props {
 	title: string;
+	mainNavigationMetadata: MainNavigationLinksMetadata;
 }
 
-const {title} = Astro.props;
+const {title, mainNavigationMetadata} = Astro.props;
 const sidenavId = 'sidenav';
 ---
 
@@ -30,7 +33,10 @@ const sidenavId = 'sidenav';
 
 		<Footer />
 
-		<LeftNav id={sidenavId} />
+		<LeftNav
+			id={sidenavId}
+			linksMetadata={mainNavigationMetadata}
+		/>
 	</body>
 </html>
 
