--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -67,6 +67,7 @@ const {id} = Astro.props;
 		padding: 4px;
 		align-items: center;
 		justify-content: space-between;
+		cursor: pointer;
 
 		&--off {
 			.theme-switcher__switch {
