--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -41,6 +41,10 @@ const {hideContactCta} = headerMetadata || {};
 			sidenavId={sidenavId}
 			hideContactCta={hideContactCta}
 		/>
+		<!-- TODO: Add Subnav after content is added -->
+		<!-- <Subnav>
+			Here
+		</Subnav> -->
 
 		<slot />
 
