--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,11 +5,12 @@
 
 <style>
 	.footer {
-		display: flex;
-		justify-content: center;
 		align-items: center;
-		height: 64px;
-		width: 100%;
 		background-color: var(--gray-250);
+		display: flex;
+		height: 64px;
+		justify-content: center;
+		margin-top: 70px;
+		width: 100%;
 	}
 </style>
