--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 @use '../styles/reset';
 @use '../styles/themes';
+@use '../styles/typography';
 
 button {
 	border: none;
@@ -17,7 +18,12 @@ button {
 }
 
 ul {
-	list-style: none;
+	list-style: disc;
+}
+
+li {
+	line-height: typography.$mobile-list-item-line-height;
+	margin-left: 16px;
 }
 
 a {
