feat: started adding 'Work Experience' section along with more assets to home page

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,7 +2,7 @@
 interface Props {
 	class?: string;
 	id: string;
-	type: 'primary' | 'secondary' | 'icon' | 'link--primary';
+	type: 'primary' | 'secondary' | 'quiet' | 'link--primary';
 	link?: string;
 }
 
